# agent-skills

./: .env  .gitignore  .vibecheckrc.json  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  architecture-plan.html  package.json  progress.md  skills-lock.json
.claude-plugin/: marketplace.json
.vibecheck/: context-engine-ledger.json  firewall.json
academic-author/: SKILL.md
academic-sync/: SKILL.md
agent-orchestration/: .skillfish.json  SKILL.md  metadata.json
analyze-llm-model/: SKILL.md
analyze-model/: SKILL.md
bootstrap/: SKILL.md
caveman/: SKILL.md
clickup-manager/: .clickup_cache.json  .skillfish.json  SKILL.md
context-engineer/: SKILL.md
course-manager/: SKILL.md
debug/: SKILL.md
deep-research/: SKILL.md  metadata.json
domain/gestionar-cursos/: SKILL.md  pyproject.toml
domain/gestionar-cursos/figures/: clickup-sync-rich-sequence.mmd  clickup-sync-sequence.mmd  clickup-sync-workflow.mmd
domain/gestionar-cursos/references/: agents-md-template.md  clickup-integracion.md  extraccion-heuristicas.md  fechas-fuente-de-verdad.md  folder-structure.md  foros-evaluables.md  sync-flow.md
domain/gestionar-cursos/scripts/: _extraer_fechas_unidad.py  _parsing.py  _procesar_foro_evaluable.py  cli_calificaciones.py  cli_clickup.py  cli_estado.py  cli_foros.py  cli_init.py  extractor_foro_evaluable.py  extractor_modulos.py  navegador_cdp.py  navegador_requests.py  scaffold_curso.py  sync_calificaciones_clickup.py
domain/gestionar-cursos/tests/: conftest.py  test_cli_calificaciones.py  test_cli_clickup_plan.py  test_parsing.py
(+447 files in other folders)
