[project]
name = "gestionar-cursos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
    "markdownify>=1.2.2",
    "openpyxl>=3.1.5",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "requests>=2.34.2",
    "selenium>=4.44.0",
    "yt-dlp>=2025.3.31",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "rich>=15.0.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"
